--- a/templates/index.html
+++ b/templates/index.html
@@ -3,10 +3,10 @@
 <html lang="en-US" class="js_active  vc_desktop  vc_transform  vc_transform skrollr skrollr-desktop"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
-	<title>Demo 2: Design Bureau | Ohio Demo 2</title>
+	<title>Demo 2: Design Bureau | Nexus</title>
 <link rel="dns-prefetch" href="https://s.w.org/">
-<link rel="alternate" type="application/rss+xml" title="Ohio Demo 2 » Feed" href="https://ohio.clbthemes.com/demo2/feed/">
-<link rel="alternate" type="application/rss+xml" title="Ohio Demo 2 » Comments Feed" href="https://ohio.clbthemes.com/demo2/comments/feed/">
+<link rel="alternate" type="application/rss+xml" title="Nexus » Feed" href="https://ohio.clbthemes.com/demo2/feed/">
+<link rel="alternate" type="application/rss+xml" title="Nexus » Comments Feed" href="https://ohio.clbthemes.com/demo2/comments/feed/">
 		<script type="text/javascript">
 			window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/12.0.0-1\/72x72\/","ext":".png","svgUrl":"https:\/\/s.w.org\/images\/core\/emoji\/12.0.0-1\/svg\/","svgExt":".svg","source":{"concatemoji":"https:\/\/ohio.clbthemes.com\/demo2\/wp-includes\/js\/wp-emoji-release.min.js?ver=5.4"}};
 			/*! This file is auto-generated */
@@ -72,7 +72,7 @@ img.emoji {
 <!-- SEO meta tags powered by SmartCrawl https://premium.wpmudev.org/project/smartcrawl-wordpress-seo/ -->
 <link rel="canonical" href="https://ohio.clbthemes.com/demo2/">
 <meta name="description" content="Architectural Design &amp; Planning Visual Facility Design Audio Facility Design Construction Art Direction Brand Identities Campaigns Cepteur sint occaecat cupidatat proident, taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole. Cepteur sint occae ...">
-<script type="application/ld+json">[{"@context":"http:\/\/schema.org","@type":"WebSite","about":"Just another WordPress site","dateModified":"2019-10-22 08:21:49.000000","description":"Just another WordPress site","encoding":"UTF-8","headline":"Ohio Demo 2","inLanguage":"en-US","name":"Ohio Demo 2","publisher":{"@type":"Organization","name":"Ohio Demo 2"},"url":"https:\/\/ohio.clbthemes.com\/demo2"},{"@context":"http:\/\/schema.org","@type":"Article","author":{"@type":"Person","name":"Colabrio","url":"https:\/\/ohio.clbthemes.com\/demo2\/author\/admin\/"},"commentCount":"0","dateModified":"2020-03-24T08:33:01","datePublished":"2019-09-04T14:35:57","description":"Architectural Design &amp; Planning Visual Facility Design Audio Facility Design Construction Art Direction Brand Identities Campaigns Cepteur sint occaecat cupidatat proident, taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole. Cepteur sint occae ...","headline":"Demo 2: Design Bureau | Ohio Demo 2","mainEntityOfPage":"https:\/\/ohio.clbthemes.com\/demo2\/","name":"Demo 2: Design Bureau","publisher":{"@type":"Organization","name":"Ohio Demo 2","logo":{"@type":"ImageObject","url":"https:\/\/secure.gravatar.com\/avatar\/?s=96&d=mm&r=g","height":60,"width":60}},"url":"https:\/\/ohio.clbthemes.com\/demo2\/"}]</script>
+<script type="application/ld+json">[{"@context":"http:\/\/schema.org","@type":"WebSite","about":"Just another WordPress site","dateModified":"2019-10-22 08:21:49.000000","description":"Just another WordPress site","encoding":"UTF-8","headline":"Nexus","inLanguage":"en-US","name":"Nexus","publisher":{"@type":"Organization","name":"Nexus"},"url":"https:\/\/ohio.clbthemes.com\/demo2"},{"@context":"http:\/\/schema.org","@type":"Article","author":{"@type":"Person","name":"Colabrio","url":"https:\/\/ohio.clbthemes.com\/demo2\/author\/admin\/"},"commentCount":"0","dateModified":"2020-03-24T08:33:01","datePublished":"2019-09-04T14:35:57","description":"Architectural Design &amp; Planning Visual Facility Design Audio Facility Design Construction Art Direction Brand Identities Campaigns Cepteur sint occaecat cupidatat proident, taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole. Cepteur sint occae ...","headline":"Demo 2: Design Bureau | Nexus","mainEntityOfPage":"https:\/\/ohio.clbthemes.com\/demo2\/","name":"Demo 2: Design Bureau","publisher":{"@type":"Organization","name":"Nexus","logo":{"@type":"ImageObject","url":"https:\/\/secure.gravatar.com\/avatar\/?s=96&d=mm&r=g","height":60,"width":60}},"url":"https:\/\/ohio.clbthemes.com\/demo2\/"}]</script>
 <!-- /SEO -->
 <style type="text/css">.recentcomments a{display:inline !important;padding:0 !important;margin:0 !important;}</style><meta name="generator" content="Powered by WPBakery Page Builder - drag and drop page builder for WordPress.">
 <meta name="generator" content="Powered by Slider Revolution 6.2.2 - responsive, Mobile-Friendly Slider Plugin for WordPress with comfortable drag and drop interface.">
@@ -176,17 +176,17 @@ img.emoji {
 	<div class="site-title">
 		<a href="https://ohio.clbthemes.com/demo2/" rel="home">
 			<div class="logo" style="display: flex;">
-									<img src="./NexusWebsite_files/OhioLogo.svg" class="svg-logo" alt="Ohio Demo 2">
+									<img src="./NexusWebsite_files/OhioLogo.svg" class="svg-logo" alt="Nexus">
 							</div>
 			<div class="fixed-logo" style="">
-									<img src="./NexusWebsite_files/OhioLogo.svg" class="svg-logo" alt="Ohio Demo 2">
+									<img src="./NexusWebsite_files/OhioLogo.svg" class="svg-logo" alt="Nexus">
 							</div>
 									<div class="for-onepage" style="">
 				<span class="dark hidden">
-											<img src="./NexusWebsite_files/OhioLogo.svg" class="svg-logo" alt="Ohio Demo 2">
+											<img src="./NexusWebsite_files/OhioLogo.svg" class="svg-logo" alt="Nexus">
 									</span>
 				<span class="light hidden">
-											Ohio Demo 2									</span>
+											Nexus									</span>
 			</div>
 		</a>
 	</div>
@@ -619,7 +619,7 @@ img.emoji {
 										--><rs-layer-wrap class="rs-parallax-wrap" style="position: absolute; display: block; pointer-events: auto; clear: none; float: none; margin: 25px 0px 30px; max-width: 100%; min-width: 100%; left: -216px; top: 252px; z-index: 9; visibility: visible;"><rs-loop-wrap style="position: absolute; display: block; width: 100%;"><rs-mask-wrap style="position: absolute; display: block; visibility: visible; overflow: visible;"><rs-layer id="slider-1-slide-1-layer-4" class="font-regular rs-layer" data-type="text" data-color="#191f23" data-xy="x:r;xo:216px;y:252px;" data-text="w:normal;s:17;l:25;fw:500;" data-dim="w:100%;" data-rsp_o="off" data-rsp_bd="off" data-margin="t:25;b:30;" data-frame_0="y:50;" data-frame_1="sp:800;" data-frame_999="o:0;st:w;sR:4200;" style="z-index: 9; font-family: Roboto; visibility: visible; text-align: left; line-height: 25px; letter-spacing: 0px; font-weight: 500; font-size: 17px; border-color: rgb(255, 255, 255); border-style: none; border-radius: 0px; padding: 0px; height: auto; color: rgb(25, 31, 35); text-decoration: none; white-space: normal; width: 100%; min-height: 0px; min-width: 0px; max-height: none; max-width: none; transform-origin: 50% 50%; opacity: 1; transform: translate(0px, 0px);" data-idcheck="true" data-stylerecorder="true" data-initialised="true">Get an inspiration<br class="vc_hidden-xs"> when its metter
 										</rs-layer></rs-mask-wrap></rs-loop-wrap></rs-layer-wrap><!--
 
-										--><rs-layer-wrap class="rs-parallax-wrap" style="position: absolute; display: block; pointer-events: auto; clear: none; float: none; margin: 0px; max-width: 100%; min-width: 100%; left: -216px; top: 336px; z-index: 10; visibility: visible;"><rs-loop-wrap style="position: absolute; display: block; width: 100%;"><rs-mask-wrap style="position: absolute; display: block; visibility: visible; overflow: visible;"><rs-layer id="slider-1-slide-1-layer-5" class="font-titles srev_headline rs-layer" data-type="text" data-color="#191f23" data-xy="x:r;xo:216px;y:336px;" data-text="w:normal;s:70;l:58;fw:700;" data-dim="w:100%;" data-rsp_o="off" data-frame_0="y:50;" data-frame_1="st:200;sp:800;sR:200;" data-frame_999="o:0;st:w;sR:4000;" style="z-index: 10; font-family: Roboto; visibility: visible; text-align: left; line-height: 47px; letter-spacing: 0px; font-weight: 700; font-size: 56px; border-color: rgb(255, 255, 255); border-style: none; border-radius: 0px; padding: 0px; height: auto; color: rgb(25, 31, 35); text-decoration: none; white-space: normal; width: 100%; min-height: 0px; min-width: 0px; max-height: none; max-width: none; transform-origin: 50% 50%; opacity: 1; transform: translate(0px, 0px);" data-idcheck="true" data-stylerecorder="true" data-initialised="true">Explore the wooden community in Fjørds.
+										--><rs-layer-wrap class="rs-parallax-wrap" style="position: absolute; display: block; pointer-events: auto; clear: none; float: none; margin: 0px; max-width: 100%; min-width: 100%; left: -216px; top: 336px; z-index: 10; visibility: visible;"><rs-loop-wrap style="position: absolute; display: block; width: 100%;"><rs-mask-wrap style="position: absolute; display: block; visibility: visible; overflow: visible;"><rs-layer id="slider-1-slide-1-layer-5" class="font-titles srev_headline rs-layer" data-type="text" data-color="#191f23" data-xy="x:r;xo:216px;y:336px;" data-text="w:normal;s:70;l:58;fw:700;" data-dim="w:100%;" data-rsp_o="off" data-frame_0="y:50;" data-frame_1="st:200;sp:800;sR:200;" data-frame_999="o:0;st:w;sR:4000;" style="z-index: 10; font-family: Roboto; visibility: visible; text-align: left; line-height: 47px; letter-spacing: 0px; font-weight: 700; font-size: 56px; border-color: rgb(255, 255, 255); border-style: none; border-radius: 0px; padding: 0px; height: auto; color: rgb(25, 31, 35); text-decoration: none; white-space: normal; width: 100%; min-height: 0px; min-width: 0px; max-height: none; max-width: none; transform-origin: 50% 50%; opacity: 1; transform: translate(0px, 0px);" data-idcheck="true" data-stylerecorder="true" data-initialised="true">Nexus, gatherings reinvented.
 										</rs-layer></rs-mask-wrap></rs-loop-wrap></rs-layer-wrap><!--
 									--></rs-column></rs-mask-wrap></rs-loop-wrap><rs-cbg-mask-wrap style="bottom: 0px; right: 0px; left: 0px; top: 0px;"><rs-column-bg id="slider-1-slide-1-layer-48_rs_cbg" style="background-size: auto; background-position: 0% 0%; background-repeat: repeat; background-image: none; background-color: transparent; border-radius: 0px; border-color: rgb(255, 255, 255); border-style: none; border-width: 0px; color: rgb(255, 255, 255); transform-origin: 50% 50%; transform: translate(0px, 0px); opacity: 1; visibility: visible;"></rs-column-bg></rs-cbg-mask-wrap></rs-column-wrap><!--
 
@@ -1823,7 +1823,7 @@ mark@sayhello.clbthemes.com<br>
 							<div class="vc_col-lg-3 vc_col-sm-6 widgets-column">
 					<ul><li id="ohio_widget_logo-1" class="widget widget_ohio_widget_logo">				<div class="theme-logo ">
 					<a href="https://ohio.clbthemes.com/demo2/">
-											<img src="./NexusWebsite_files/OhioLogo.svg" class="svg-logo" alt="Ohio Demo 2">
+											<img src="./NexusWebsite_files/OhioLogo.svg" class="svg-logo" alt="Nexus">
 										</a>
 				</div>
 			</li>
