--- a/templates/index.html
+++ b/templates/index.html
@@ -1059,7 +1059,9 @@ in Fjords
 
 
 	<h2 class="title subtitle-top">
+		<br>
 		Who we are </h2>
+	</br>
 
 
 
@@ -1075,9 +1077,7 @@ in Fjords
 </div></div></div></div><div class="wpb_column vc_column_container vc_col-sm-6"><div class="vc_column-inner"><div class="wpb_wrapper"><div class="vc_separator wpb_content_element vc_separator_align_center vc_sep_width_100 vc_sep_pos_align_center vc_separator_no_text"><span class="vc_sep_holder vc_sep_holder_l"><span style="border-color:rgb(17,17,17);border-color:rgba(17,17,17,0.4);" class="vc_sep_line"></span></span><span class="vc_sep_holder vc_sep_holder_r"><span style="border-color:rgb(17,17,17);border-color:rgba(17,17,17,0.4);" class="vc_sep_line"></span></span>
 </div><div class="vc_empty_space" style="height: 5px"><span class="vc_empty_space_inner"></span></div><div class="ohio-text-sc " id="ohio-custom-5e8f75a559fd6">
 
-	<p><strong>Through an online, event-centric, location-simulating, multiplayer role-playing application, our goal is to provide a virtual alternative to physical location-based community events, e.g. the end-of-year graduation ceremony experience for high-school seniors, while upholding health regulations and our collective social responsibilities.</strong><br>
-<!--> <strong>Brand Identities</strong><br> <-->
-<strong>Campaigns</strong></p>
+	<p><strong>Through an online, event-centric, location-simulating, multiplayer role-playing application, our goal is to provide a virtual alternative to physical location-based community events, e.g. the end-of-year graduation ceremony experience for high-school seniors, while upholding health regulations and our collective social responsibilities.</strong><br> </p>
 
 </div></div></div></div></div><div class="vc_empty_space  vc_hidden-lg vc_hidden-md" style="height: 40px"><span class="vc_empty_space_inner"></span></div></div></div><div class="vc_parallax-inner skrollable skrollable-between" data-bottom-top="top: -30%;" data-top-bottom="top: 0%;" style="height: 130%; background-image: url(&quot;&quot;); top: -30%;"></div></div></div><div class="vc_row-full-width vc_clearfix"></div><div data-vc-full-width="true" data-vc-full-width-init="true" data-vc-stretch-content="true" class="vc_row wpb_row vc_row-fluid clb-column-padding-left clb__custom_parallax_section vc_row-no-padding vc_row-o-equal-height vc_row-o-content-bottom vc_row-flex" style="position: relative; left: -95px; box-sizing: border-box; width: 1440px;"><div class="vc-bg-lines page-container dark"><div></div><div></div><div></div><div></div><div></div></div><div class="clb__stretch_content clb__padding_reset wpb_column vc_column_container vc_col-sm-6 vc_col-md-5 vc_col-has-fill" style="padding-left: 115px;"><div class="vc_column-inner vc_custom_1572951552645"><div class="wpb_wrapper">
 	<div class="text-left">
