--- a/templates/index.html
+++ b/templates/index.html
@@ -1056,6 +1056,8 @@ in Fjords
 
 			<p class="subtitle">
 			Our Services		</p>
+			<br>
+		</br>
 
 
 	<h2 class="title subtitle-top">
@@ -1065,8 +1067,8 @@ in Fjords
 
 
 
-</div><div class="vc_row wpb_row vc_inner vc_row-fluid"><div class="wpb_column vc_column_container vc_col-sm-6"><div class="vc_column-inner"><div class="wpb_wrapper"><div class="vc_separator wpb_content_element vc_separator_align_center vc_sep_width_100 vc_sep_pos_align_center vc_separator_no_text"><span class="vc_sep_holder vc_sep_holder_l"><span style="border-color:rgb(17,17,17);border-color:rgba(17,17,17,0.4);" class="vc_sep_line"></span></span><span class="vc_sep_holder vc_sep_holder_r"><span style="border-color:rgb(17,17,17);border-color:rgba(17,17,17,0.4);" class="vc_sep_line"></span></span>
-</div><div class="vc_empty_space" style="height: 5px"><span class="vc_empty_space_inner"></span></div><div class="ohio-text-sc " id="ohio-custom-5e8f75a559b49">
+<!--> </div><div class="vc_row wpb_row vc_inner vc_row-fluid"><div class="wpb_column vc_column_container vc_col-sm-6"><div class="vc_column-inner"><div class="wpb_wrapper"><div class="vc_separator wpb_content_element vc_separator_align_center vc_sep_width_100 vc_sep_pos_align_center vc_separator_no_text"><span class="vc_sep_holder vc_sep_holder_l"><span style="border-color:rgb(17,17,17);border-color:rgba(17,17,17,0.4);" class="vc_sep_line"></span></span><span class="vc_sep_holder vc_sep_holder_r"><span style="border-color:rgb(17,17,17);border-color:rgba(17,17,17,0.4);" class="vc_sep_line"></span></span>
+</div><div class="vc_empty_space" style="height: 5px"><span class="vc_empty_space_inner"></span></div><div class="ohio-text-sc " id="ohio-custom-5e8f75a559b49"> <-->
 
 	<p><strong>Nexus is a cross-platform, multiplayer, location-simulating application that provides the users with a virtual community-event experience. With the outbreak of the novel COVID-19 virus, social-distancing regulations have widely been enforced throughout the world. As a result, institutions have been forced to close down their physical establishments, canceling many events their communities have looked forward to attending.
 </strong><br>
