--- a/templates/access.html
+++ b/templates/access.html
@@ -34,7 +34,7 @@
 
    <div class="card">
     <div class="card-body">
-      <h3>Your current password</h3>
+      <h3>Your current password <span style="font-size:10px">(refresh to see new password)</span></h3>
       <p id="current-pass" style="display:none">{{password}}</p>
       <button class="btn btn-primary" onclick="toggleShow('current-pass')" >Toggle show password</button>
     </div>
