--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
     <div class="page-load-inner">
       <div class="preloader-wrap">
         <div class="wrap-2">
-          <div class=""> <img src="{{url_for('static',filename='img/icons/brook-preloader.gif')}}" alt="Brook Preloader"></div>
+          <div class=""> <img src="{{url_for('static',filename='img/icons/preloader.gif')}}" alt="Brook Preloader"></div>
         </div>
       </div>
     </div>
