--- a/templates/index.html
+++ b/templates/index.html
@@ -782,7 +782,7 @@
               data-height="none" data-whitespace="nowrap" data-type="image" data-responsive_offset="off" data-responsive="off"
               data-frames='[{"delay":700,"speed":1500,"frame":"0","from":"y:50px;opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
               data-textAlign="['inherit','inherit','inherit','inherit']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 7;"><img
-                src="{{url_for('static',filename='img/revoulation/bg.jpg')}}" alt="" data-ww="['118px','118px','118px','118px']" data-hh="['7px','7px','7px','7px']" data-no-retina> </div> <!-- LAYER NR. 4 -->
+                src="{{url_for('static',filename='img/revoulation/slide.png')}}" alt="" data-ww="['118px','118px','118px','118px']" data-hh="['7px','7px','7px','7px']" data-no-retina> </div> <!-- LAYER NR. 4 -->
             <div class="tp-caption creative-agency-pra" id="slide-7-layer-6" data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']" data-y="['middle','middle','middle','middle']" data-voffset="['135','135','140','120']"
               data-fontsize="['18','18','18','16']" data-lineheight="['30','30','30','27']" data-width="['570','570','400','360']" data-height="none" data-whitespace="normal" data-type="text" data-responsive_offset="off" data-responsive="off"
               data-frames='[{"delay":900,"speed":1500,"frame":"0","from":"y:50px;opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
