--- a/templates/index.html
+++ b/templates/index.html
@@ -827,10 +827,10 @@
             <div class="col-lg-6 col-md-12 col-12 mt_md--40 mt_sm--40">
               <div class="content pl--80 pl_md--5 pl_sm--5">
                 <div class="title--creative wow move-up">
-                  <h3 class="heading">about us</h3>
+                  <h3 class="heading">our mission</h3>
                   <h2>We're motivated by the <span class="theme-creative">desire to achieve.</span></h2>
                 </div>
-                <p class="wow move-up">In order for you to achieve the things you are capable of, you need to constantly be creating goals for yourself.</p> <a class="about-btn wow move-up" href="#"><span>More Details</span><i
+                <p class="wow move-up">Nexus is a cross-platform, multiplayer, location-simulating application that provides the users with a virtual community-event experience. With the outbreak of the novel COVID-19 virus, social-distancing regulations have widely been enforced throughout the world. As a result, institutions have been forced to close down their physical establishments, canceling many events their communities have looked forward to attending. Through an online, event-centric, location-simulating, multiplayer role-playing application, our goal is to provide a virtual alternative to physical location-based community events, e.g. the end-of-year graduation ceremony experience for high-school seniors, while upholding health regulations and our collective social responsibilities. .</p> <a class="about-btn wow move-up" href="#"><span>More Details</span><i
                     class="fa fa-arrow-right"></i></a>
               </div>
             </div>
@@ -1202,8 +1202,8 @@
               <div class="col-lg-12">
                 <div class="call-to-action callto-action--1">
                   <div class="content">
-                    <h6>Build a creative website in no time</h6>
-                    <h3>Ready to enjoy <span>Brook Studio ?</span></h3> <button><span>Contact us</span><i class="fa fa-arrow-right"></i></button>
+                    <h6>Host your events in no time</h6>
+                    <h3>Ready to enjoy <span>a virtual event ?</span></h3> <button><span>Contact us</span><i class="fa fa-arrow-right"></i></button>
                   </div>
                 </div>
               </div>
