--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@
                 <div class="mainmenu-wrapper have-not-flex d-none d-lg-block">
                   <nav class="page_nav">
                     <ul class="mainmenu">
-                      <li class="lavel-1 with--drop slide--megamenu"><a href="#"><span>Connect</span></a> <!-- Start Mega Menu -->
+                      <li class="lavel-1 slide--megamenu"><a href="#"><span>Connect</span></a> <!-- Start Mega Menu -->
                       </li>
                       <li class="lavel-1 with--drop slide--megamenu"><a href="#"><span>Blog</span></a> <!-- Start Mega Menu -->
                         <div class="mega__width--fullscreen">
