--- a/templates/index.html
+++ b/templates/index.html
@@ -455,6 +455,26 @@
         </div>
       </div> <!-- End About Area -->
       <!-- Start Service Area -->
+      <!-- DELETE IF NECESSARY -->
+      <div class="bk-about-area section-ptb-100" id="section-about">
+        <div class="container">
+          <div class="row about--creative align-items-center">
+            <div class="col-lg-6 col-md-12 col-12">
+              <div class="thumb text-left text-lg-left wow move-up"> <img src="{{url_for('static',filename='img/about/home-creative-agency-image-01.png')}}" alt="about images"> </div>
+            </div>
+            <div class="col-lg-6 col-md-12 col-12 mt_md--40 mt_sm--40">
+              <div class="content pl--80 pl_md--5 pl_sm--5">
+                <div class="title--creative wow move-up">
+                  <h3 class="heading">our mission</h3>
+                  <h2>We're motivated by the <span class="theme-creative">desire to achieve.</span></h2>
+                </div>
+                <p class="wow move-up">Nexus is a cross-platform, multiplayer, location-simulating application that provides the users with a virtual community-event experience. With the outbreak of the novel COVID-19 virus, social-distancing regulations have widely been enforced throughout the world. As a result, institutions have been forced to close down their physical establishments, canceling many events their communities have looked forward to attending. Through an online, event-centric, location-simulating, multiplayer role-playing application, our goal is to provide a virtual alternative to physical location-based community events, e.g. the end-of-year graduation ceremony experience for high-school seniors, while upholding health regulations and our collective social responsibilities. .</p> <a class="about-btn wow move-up" href="#"><span>More Details</span><i
+                    class="fa fa-arrow-right"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      <!-- DELETE IF NECESSARY -->
       <div class="bk-service-area section-pb-120">
         <div class="container">
           <div class="row">
