--- a/templates/index.html
+++ b/templates/index.html
@@ -455,7 +455,7 @@
         </div>
       </div> <!-- End About Area -->
       <!-- Start Service Area -->
-      <!-- DELETE IF NECESSARY -->
+      <!-- Our Technology  -->
       <div class="bk-about-area section-ptb-100" id="section-about">
         <div class="container">
           <div class="row about--creative align-items-center">
@@ -465,16 +465,17 @@
             <div class="col-lg-6 col-md-12 col-12 mt_md--40 mt_sm--40">
               <div class="content pl--80 pl_md--5 pl_sm--5">
                 <div class="title--creative wow move-up">
-                  <h3 class="heading">our mission</h3>
-                  <h2>We're motivated by the <span class="theme-creative">desire to achieve.</span></h2>
+                  <h3 class="heading">our technology</h3>
+                  <h2>Dynamic event system<span class="theme-creative">through the Unity gaming platform..</span></h2>
                 </div>
-                <p class="wow move-up">Nexus is a cross-platform, multiplayer, location-simulating application that provides the users with a virtual community-event experience. With the outbreak of the novel COVID-19 virus, social-distancing regulations have widely been enforced throughout the world. As a result, institutions have been forced to close down their physical establishments, canceling many events their communities have looked forward to attending. Through an online, event-centric, location-simulating, multiplayer role-playing application, our goal is to provide a virtual alternative to physical location-based community events, e.g. the end-of-year graduation ceremony experience for high-school seniors, while upholding health regulations and our collective social responsibilities. .</p> <a class="about-btn wow move-up" href="#"><span>More Details</span><i
+                <p class="wow move-up">Nexus' is a dynamic event platform regulated by system admins who will be able to create their own customized events based in a 3-dimensional world, enhanced to look as realistic as possible through advanced rendering methods developed on the Unity gaming platform. Our platform utilizes realistic school-building terrain models imported from Google Earth which are enhanced by animated graphics. Our features are equipped with customizable avatars, based in an immersive experience enhanced with a spacial sound system to allow live, real voice communication and interaction with other players.
+ .</p> <a class="about-btn wow move-up" href="#"><span>More Details</span><i
                     class="fa fa-arrow-right"></i></a>
               </div>
             </div>
           </div>
         </div>
-      <!-- DELETE IF NECESSARY -->
+      <!-- Our technology -->
       <div class="bk-service-area section-pb-120">
         <div class="container">
           <div class="row">
