--- a/templates/index.html
+++ b/templates/index.html
@@ -393,7 +393,7 @@
               data-responsive_offset="off" data-responsive="off"
               data-frames='[{"delay":500,"speed":1500,"frame":"0","from":"y:-50px;opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
               data-textAlign="['center','center','center','center']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]"
-              style="z-index: 6; white-space: nowrap; font-size: 120px; line-height: 146px; font-weight: 700; color: #ffffff; letter-spacing: 0px; font-family: Roboto">Nexus <span class="secondary-font" style="font-style: italic;">Studio</span> </div>
+              style="z-index: 6; white-space: nowrap; font-size: 120px; line-height: 146px; font-weight: 700; color: #ffffff; letter-spacing: 0px">Nexus <span class="secondary-font" style="font-style: italic;">Studio</span> </div>
             <!-- LAYER NR. 3 -->
             <div class="tp-caption " id="slide-7-layer-5" data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']" data-y="['middle','middle','middle','middle']" data-voffset="['54','54','70','50']" data-width="none"
               data-height="none" data-whitespace="nowrap" data-type="image" data-responsive_offset="off" data-responsive="off"
